# Brick_game

./: CMakeLists.txt  config.json
src/: Ball.h  Game.cpp  Game.h  Paddle.h  PowerUp.cpp  PowerUp.h  json.hpp  main.cpp  test.cpp
src_backup/: Ball.cpp  Brick.cpp  Brick.h  Paddle.cpp  Paddle.h  main.cpp
